<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >
 
    <!-- Name Label -->
 
    <TextView
        android:id="@+id/titre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:text="@string/titre"
        android:textColor="#43bd00"
        android:textSize="16sp"
        android:textStyle="bold" />
 
    <!-- Email label -->

    <TextView
        android:id="@+id/idProjetTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dip"
        android:text="@string/idprojet"
        android:textColor="#acacac" />
  
    <!-- Mobile number label -->

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/description"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="144dp"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/latitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:text="@string/latitude"
            android:textColor="#acacac" />

        <TextView
            android:id="@+id/longitudeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dip"
            android:text="@string/longitude"
            android:textColor="#acacac" />
    </LinearLayout>
 
</LinearLayout>