<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:ignore="NestedWeights" >

    <!-- android:background="@drawable/back" -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titre_projet"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextDescriptionCourte"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description_courte"
            android:inputType="textMultiLine"
            android:lines="5"
            android:scrollbarStyle="insideOverlay"
            android:scrollbars="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/SpinnerCategorie"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:entries="@array/feedbacktypelist"
                android:prompt="@string/feedbacktype" />

            <CheckBox
                android:id="@+id/CheckBoxPrive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedbackresponse" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annuler" />

            <Button
                android:id="@+id/enregistrer_Bouton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enregistrer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/editTextLatitude"
                        android:layout_width="126dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:ems="10"
                        android:hint="@string/latitude" />

                    <EditText
                        android:id="@+id/editTextLongitude"
                        android:layout_width="118dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="26dp"
                        android:ems="10"
                        android:hint="@string/longitude" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btnShowLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/btnShowLocation" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>