<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/projet_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:maxHeight="80dp"
                android:maxWidth="80dp"
                android:src="@drawable/world_green" />

            <TextView
                android:id="@+id/projet_textDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="248dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/projet_textTitreProjet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre_projet"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/projet_textDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:text="@string/textdescription" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>